improved AttnSeq2Seq

--- a/Lab_2/MyTransformer.ipynb
+++ b/Lab_2/MyTransformer.ipynb
@@ -2,16 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "N-yaqmaHCCjZ"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -19,33 +10,23 @@
     "id": "1N_OcY6WCGuu",
     "outputId": "3ccea913-bb93-4f79-d919-98addbc7d40e"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset not found locally. Downloading from github.\n",
-      "--2024-03-03 12:52:25--  https://raw.githubusercontent.com/neychev/made_nlp_course/master/datasets/Machine_translation_EN_RU/data.txt\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 12905334 (12M) [text/plain]\n",
-      "Saving to: ‘data.txt’\n",
-      "\n",
-      "data.txt            100%[===================>]  12.31M  --.-KB/s    in 0.07s   \n",
-      "\n",
-      "2024-03-03 12:52:25 (179 MB/s) - ‘data.txt’ saved [12905334/12905334]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "path_to_data = '../../datasets/Machine_translation_EN_RU/data.txt'\n",
-    "if not os.path.exists(path_to_data):\n",
-    "    print(\"Dataset not found locally. Downloading from github.\")\n",
-    "    !wget https://raw.githubusercontent.com/neychev/made_nlp_course/master/datasets/Machine_translation_EN_RU/data.txt -nc\n",
-    "    path_to_data = './data.txt'"
+    "# path_to_data = '../../datasets/Machine_translation_EN_RU/data.txt'\n",
+    "# if not os.path.exists(path_to_data):\n",
+    "#     print(\"Dataset not found locally. Downloading from github.\")\n",
+    "#     !wget https://raw.githubusercontent.com/neychev/made_nlp_course/master/datasets/Machine_translation_EN_RU/data.txt -nc\n",
+    "#     path_to_data = './data.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_data = './data.txt'"
    ]
   },
   {
@@ -54,7 +35,16 @@
    "metadata": {
     "id": "_2Zoud9YCHTp"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/calculation/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -80,15 +70,6 @@
     "%matplotlib inline\n",
     "from IPython.display import clear_output"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "id": "bWst6WuPvrjp"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -194,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "id": "Xlb_KxT4qnww"
    },
@@ -205,7 +186,7 @@
     "    counter = Counter()\n",
     "    for sentence in tokenized_sentences:\n",
     "        counter.update(sentence)\n",
-    "    vocab = torchtext.vocab.vocab(counter, min_freq=4, specials=('<UNK>', '<SOS>', '<EOS>', '<PAD>'))\n",
+    "    vocab = torchtext.vocab.vocab(counter, min_freq=3, specials=('<UNK>', '<SOS>', '<EOS>', '<PAD>'))\n",
     "    vocab.set_default_index(vocab[\"<UNK>\"])\n",
     "    return vocab\n",
     "\n",
@@ -215,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "id": "ebQlhWacttgv"
    },
@@ -225,12 +206,13 @@
     "TGT_VOCAB_SIZE = len(en_vocab)\n",
     "PAD_IDX = en_vocab['<PAD>']\n",
     "SOS_IDX = en_vocab['<SOS>']\n",
-    "EOS_IDX = en_vocab['<EOS>']"
+    "EOS_IDX = en_vocab['<EOS>']\n",
+    "UNK_IDX = en_vocab['<UNK>']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -243,8 +225,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6718\n",
-      "8706\n"
+      "8713\n",
+      "11303\n"
      ]
     }
    ],
@@ -255,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {
     "id": "OT8o-VVtrTig"
    },
@@ -276,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "id": "nnAVOeFNthS7"
    },
@@ -309,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "id": "Q7xVWK-NxCK8"
    },
@@ -320,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -333,7 +315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([50, 128])\n"
+      "torch.Size([36, 128])\n"
      ]
     }
    ],
@@ -352,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "id": "HiItw-uqxVfa"
    },
@@ -437,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "id": "aggqBgaLzPR8"
    },
@@ -463,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -476,7 +458,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.10/dist-packages/torch/nn/modules/transformer.py:282: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "/opt/calculation/anaconda3/lib/python3.9/site-packages/torch/nn/modules/transformer.py:286: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
       "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
      ]
     }
@@ -784,9 +766,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
