Prepared attn seq2seq lab

--- a/Lab_2/Transformer/MyTransformer.ipynb
+++ b/Lab_2/Transformer/MyTransformer.ipynb
@@ -6,21 +6,27 @@
    "source": [
     "## Summary\n",
     "\n",
-    "В данном блокноте приведена реализация трансформера. За основу взят модуль nn.Transformer.\n",
+    "В данном ноутбуке приведена реализация трансформера. За основу взят модуль nn.Transformer.\n",
     "\n",
     "Для создания словаря опять использовался теокенизатор по словам и пунктуации (nltk.tokenize.wordpunct_tokenize). Для попадания в словарь слово должно встретиться в корпусе хотя бы 3 раза.\n",
     "\n",
     "Я проводил подбор гиперпараметров. Получилось, что в данной задаче наилучшим образом себя показывает небольшой трансформер. Большие модели слишком долго обучаются и при этом имеют склонность к переобучению.\n",
     "\n",
-    "Остановился на размере эмбединга 256, размер скрытого слоя в FFN 512, кол-во энкодеров и декодеров 3 и 3. Кол-во голов аттеншенна 4. Дропаут 0.1. В моделе порядка 11M параметров. Модель обучалась 15 эпох. В конце она уже вышла на плато по BLEU на валидационной выборке.\n",
+    "Остановился на размере эмбединга 256, размер скрытого слоя в FFN 512, кол-во энкодеров и декодеров 3 и 3. Кол-во голов аттеншенна 4. Дропаут 0.1. В моделе порядка 11M параметров. Модель обучалась 15 эпох. Обучение одной эпохи занимало околок пол минуты. В конце 15 эпохи видно, что фактически перестала улучшать BLEU на валидационной выборке и вышла на плато.\n",
     "\n",
     "Пробовал брать разные дропауты, для борбы с переобучением. Оказалось, что при дропауте 0.5 модель очень плохо и долго обучается. Поэтому дропаут старался брать маленьким (0.1-0.2).\n",
     "\n",
-    "Начальный lr взят 0.0002. При подборе lr набдюдал, что при больших значениях lr (больше 0.0004) модель сильно переобучается и validation loss получается сильно выше чем на трейне, который тоже оказывается не очень маленьким.\n",
+    "Начальный lr взят 0.0002. При подборе lr набдюдал, что при больших значениях lr (больше 0.0004) модель сильно переобучается и validation loss получается сильно выше чем на трейне, который тоже оказывается не очень маленьким. Иными словами модель не может нормально обучаться с такими большими lr.\n",
     "\n",
-    "Также пробовал использовать различные learning rate schedulers. Шкедьюлер из статьи Attention is all you nead плохо подошел для данной задачи. На практике в данной задаче оказалось, что для достаточно маленькой модели warmup должен быть коротким. А если он короткий, то потом lr очень быстро затухает, когда модель еще не успела нормально обучиться. Поэтому использовался обычный StepLR, который раз в 200 шагов понижает lr в заданное кол-во раз. Попробовав несколько коэфициентов, решил взять 0.92, при котором lr понижается не очень быстро.\n",
+    "Также пробовал использовать различные learning rate schedulers. Шедьюлер из статьи Attention is all you nead плохо подошел для данной задачи. На практике в данной задаче оказалось, что для достаточно маленькой модели warmup должен быть коротким. А если он короткий, то потом lr очень быстро затухает, когда модель еще не успела нормально обучиться. Поэтому использовался обычный StepLR, который раз в 200 шагов понижает lr в заданное кол-во раз. Попробовав несколько коэфициентов, решил взять 0.92, при котором lr понижается не очень быстро.\n",
     "\n",
-    "ИТОГИ: После подбора всех гиперпараметров итоговая модель трансформера дала BLEU на тестовой выборке 28.8."
+    "ИТОГИ:\n",
+    "\n",
+    "После подбора всех гиперпараметров итоговая модель трансформера дала BLEU на тестовой выборке 28.8.\n",
+    "\n",
+    "В сравнении с Seq2Seq моделью с вниманием схожего размера трансформер показал себя примерно одинаково. AttnSeq2Seq дает BLEU 29.1, а трансформер 28.8. Различие минимальное и при более тщательном подборе параметров BLEU можно увеличить как для трансформера, так и для AttnSeq2Seq. \n",
+    "\n",
+    "Обучение моделей такого размера также занимает примерно одинаковое время."
    ]
   },
   {
