Prepared base seq2seq lab

--- a/Lab_2/Transformer/MyTransformer.ipynb
+++ b/Lab_2/Transformer/MyTransformer.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Я проводил подбор гиперпараметров. Получилось, что в данной задаче наилучшим образом себя показывает небольшой трансформер. Большие модели слишком долго обучаются и при этом имеют склонность к переобучению.\n",
     "\n",
-    "Остановился на размере эмбединга 256, размер скрытого слоя в FFN 512, кол-во энкодеров и декодеров 3 и 3. Кол-во голов аттеншенна 4. Дропаут 0.1. В моделе порядка 11M параметров. Модель обучалась 15 эпох. Обучение одной эпохи занимало околок пол минуты. В конце 15 эпохи видно, что фактически перестала улучшать BLEU на валидационной выборке и вышла на плато.\n",
+    "Остановился на размере эмбединга 256, размер скрытого слоя в FFN 512, кол-во энкодеров и декодеров 3 и 3. Кол-во голов аттеншенна 4. Дропаут 0.1. В моделе порядка 11M параметров. Модель обучалась 15 эпох. Обучение одной эпохи занимало околок пол минуты. В конце 15 эпохи видно, что BLEU на валидационной выборке фактически перестала улучшать и вышла на плато.\n",
     "\n",
     "Пробовал брать разные дропауты, для борбы с переобучением. Оказалось, что при дропауте 0.5 модель очень плохо и долго обучается. Поэтому дропаут старался брать маленьким (0.1-0.2).\n",
     "\n",
@@ -24,7 +24,7 @@
     "\n",
     "После подбора всех гиперпараметров итоговая модель трансформера дала BLEU на тестовой выборке 28.8.\n",
     "\n",
-    "В сравнении с Seq2Seq моделью с вниманием схожего размера трансформер показал себя примерно одинаково. AttnSeq2Seq дает BLEU 29.1, а трансформер 28.8. Различие минимальное и при более тщательном подборе параметров BLEU можно увеличить как для трансформера, так и для AttnSeq2Seq. \n",
+    "В сравнении с Seq2Seq моделью с вниманием схожего размера трансформер показал себя примерно одинаково. AttnSeq2Seq дает BLEU 29.1, а трансформер 28.8. Различие минимальное и при более тщательном подборе гиперпараметров BLEU можно увеличить как для трансформера, так и для AttnSeq2Seq. \n",
     "\n",
     "Обучение моделей такого размера также занимает примерно одинаковое время."
    ]
